--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,13 @@
 {
   "name": "yithlib",
   "dependencies": {
-    "ember": "~2.5.0",
-    "ember-cli-shims": "0.1.1",
-    "ember-cli-test-loader": "0.2.2",
+    "ember": "~2.8.0",
+    "ember-cli-shims": "0.1.3",
     "jquery": "1.11.3",
-    "moment": "~2.13.0",
-    "sjcl": "~1.0.3",
-    "font-awesome": "~4.6.1",
-    "bootstrap-sass": "~3.3.6",
-    "jquery.scrollTo": "^2.1.2",
-    "ember-qunit-notifications": "0.1.0"
+    "moment": "~2.15.0",
+    "sjcl": "~1.0.6",
+    "font-awesome": "~4.6.3",
+    "bootstrap-sass": "~3.3.7",
+    "jquery.scrollTo": "^2.1.2"
   }
 }
